--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,4 @@
-<% @product.each do |f| %>
-   <%= link_to f.name %>
-    <br>
+<% @products.each do |f| %>
+	<%= link_to f.name, product_path(f) %>
+<br>
 <% end %>
