Add views/categories and Fix views/brands

--- a/app/views/brands/show.html.erb
+++ b/app/views/brands/show.html.erb
@@ -1,5 +1,5 @@
 <%= @brand.name %><br>
 <br><br><br>
-<%= link_to 'Yeni Marka Ekle', 'pbrands/new' %>
+<%= link_to 'Yeni Marka Ekle', 'brands/new' %>
 <br><br>
 <%= link_to 'Back', root_path %>
