--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,14 +1,19 @@
-<h2>Yeni marka ekle: </h2>
+<h2>Yeni Kategori ekle: </h2>
 
-<%= simple_form_for @brand, html: { multipart: true } do |f| %>
+<%= simple_form_for @category, html: { multipart: true }  do |f| %>
     <p>
       <%= f.label :name %><br>
       <%= f.input_field :name %>
     </p>
 
     <p>
+      <%= f.file_field :image %><br>
+    </p>
+
+    <p>
       <%= f.submit %>
     </p>
+
 
     <%= link_to 'Back', root_path %>
 
