.gitignore Update => database include

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,3 +4,8 @@
 <% @categories.each do |cat| %>
     <%= cat.name %>
 <% end %>
+<br>
+<% @products.each do |pro| %>
+    <%= pro.name %>
+    <br>
+    <% end %>
