Testing View(products index), Fixin' Stuff(new product path add)

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,6 +5,6 @@
 <%= @product.price %> ₺
 <br><br>
 <br><br><br>
-<%= link_to 'Yeni Ürün Ekle', 'products/new' %>
+<%= link_to 'Yeni Ürün Ekle', new_product_path %>
 <br><br>
 <%= link_to 'Back', root_path %>
