--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,10 +1,35 @@
-<% @products.each do |f| %>
-<<<<<<< HEAD
-	<%= link_to f.name, product_path(f) %>
-<br>
-<% end %>
-=======
-   <%= link_to f.name, product_path(f) %>
-    <br>
-<% end %>
->>>>>>> 2809b33f30af21cb2d10ebe4bf8f11e910074e67
+<div class="col-md-6">
+    <h3><%= @brands.first.name %></h3>
+    <div class="row">
+        <div class="col-md-6">
+            <h5><%= @categories.first.name %></h5>
+            <% @products.where(brand_id: 1, category_id: 1).each do |f| %>
+            <%= link_to f.name, product_path(f) %>
+            <% end %>
+        </div>
+        <div class="col-md-6">
+            <h5><%= @categories.second.name %></h5>
+            <% @products.where(brand_id: 1, category_id: 2).each do |f| %>
+            <%= link_to f.name, product_path(f) %>
+            <% end %>
+        </div>
+    </div>
+
+</div>
+<div class="col-md-6">
+    <h3><%= @brands.second.name %></h3>
+    <div class="row">
+        <div class="col-md-6">
+            <h5><%= @categories.first.name %></h5>
+            <% @products.where(brand_id: 2, category_id: 1).each do |f| %>
+            <%= link_to f.name, product_path(f) %>
+            <% end %>
+        </div>
+        <div class="col-md-6">
+            <h5><%= @categories.second.name %></h5>
+            <% @products.where(brand_id: 2, category_id: 2).each do |f| %>
+            <%= link_to f.name, product_path(f) %>
+            <% end %>
+        </div>
+</div>
+
