--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   </head>
 
   <body>
+    <center><%= image_tag "logo.png" %></center>
     <%= render 'partials/nav' %>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
