Paginate Product on welcome page, logo moved to navbar

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,4 +8,6 @@
 <% @products.each do |pro| %>
     <%= pro.name %>
     <br>
-    <% end %>
+<% end %>
+
+<%= will_paginate @products, renderer: BootstrapPagination::Rails %>
