--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Winnerproject</title>
+    <title>Winner's Market</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -9,7 +9,6 @@
   </head>
 
   <body>
-    <center><%= image_tag "logo.png" %></center>
     <%= render 'partials/nav' %>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
