--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -4,10 +4,9 @@
 
     </div>
     <div class="col-md-4 navbar-brand">
-      Brand
+      <%= image_tag "logo.png" %>
     </div>
     <div class="col-md-4">
-
     </div>
   </div>
 </nav>
