--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,10 @@
 
   <body>
     <%= render 'partials/nav' %>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    <%= yield %>
+    <div class="row">
+      <div class="col-md-10 col-md-offset-1">
+        <%= yield %>
+      </div>
+    </div>
   </body>
 </html>
