--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -1,12 +1,50 @@
-<nav>
-  <div class="row">
-    <div class="col-md-4">
-
+<nav class="navbar navbar-default" role="navigation">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      
     </div>
-    <div class="col-md-4 navbar-brand">
-      <%= image_tag "logo.png" %>
-    </div>
-    <div class="col-md-4">
-    </div>
-  </div>
+    <a class="navbar-brand" href=" <%= root_path %> ">
+      <%= image_tag "logo.png"%>
+    </a>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="navbar-collapse-1">
+     
+      <ul class="nav navbar-nav navbar-left">
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"> <b class="caret"></b> Kategoriler </a>
+          <ul class="dropdown-menu">
+            <% @categories.each do |cat| %>
+            <li><a href="<%= category_path(cat) %>"> <%= cat.name %> </a></li>
+            <% end %>
+          </ul>
+        </li>
+        <li><a href="<%= brands_path %>">Markalar</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="<%= cart_path(current_user) %>">
+          <i class="fa fa-shopping-cart" aria-hidden="true"></i>  
+        </a></li>
+        <% if current_user %>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"> <%= current_user.email %> <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li class="divider"></li>
+            <li><%= link_to  "Çıkış Yap", destroy_user_session_path, method: :delete %></li>
+          </ul>
+        </li>
+        <% else %>
+        <li><%= link_to  "Giriş Yap", new_user_session_path %></li>
+        <li><%= link_to  "Kayıt Ol", new_user_registration_path %></li>
+        <% end %>
+      </ul>
+    </div><!-- /.navbar-collapse -->
 </nav>
