--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,13 +1,62 @@
-<%= @product.name %> <br>
+<!-- <%= @product.name %> <br>
 <%= @product.brand.name %> <br>
 <%= @product.category.name %> <br>
 <%= @product.description %> <br>
 <%= @product.price %> ₺
 
-<%= link_to "Sepete Ekle", add_to_cart_path(product_id: @product.id), method: :post %>
 <br><br>
-<%= link_to  "Ürünü Değiştir", edit_product_path(@product) %>
 <br><br><br>
-<%= link_to 'Yeni Ürün Ekle', new_product_path %>
-<br><br>
-<%= link_to 'Back', root_path %>
+<%= link_to 'Back', root_path %> -->
+
+<div class="row single-product">
+    <div class="col-md-4 col-md-offset-2 product-image">
+        <%= image_tag @product.image.url %>
+    </div>
+    <div class="col-md-4 col-sm-12 product-desc">
+        <div class="price">
+            <h4> <%= @product.price %> ₺ </h4>
+        </div>
+        <div class="desc">
+            <h4>
+                <%= @product.name %>
+            </h4>
+            <p>
+                <%= @product.description %>
+            </p>
+            <div class="text-center">
+            Kategori | <%= link_to  "#{ @product.category.name }", category_path(@product.category) %> <br>
+            Marka | <%= link_to  "#{ @product.brand.name }", brand_path(@product.brand) %>
+            </div>
+            
+            <%= link_to "Sepete Ekle#{notice}", add_to_cart_path(product_id: @product.id), class: "btn btn-block", method: :post %>
+        </div>
+    </div>
+    <div class="col-md-8 col-md-offset-2 col-sm-12" style="margin-top: 30px; padding: 0;">
+        <% if current_user.admin? %>
+            <%= link_to  "Ürünü Değiştir", edit_product_path(@product), class: "btn btn-block btn-admin" %>
+        <% end %>
+    </div>
+    <div class="col-md-12 text-center">
+        <hr>
+        <h3>Aynı marka ürünler</h3>
+        <hr>
+    </div>
+    <% @products.each do |pro| %>
+    <div class="col-md-3 col-sm-6 col-xs-12 product">
+        <%= image_tag pro.image.url %>
+        <div class="price">
+            <h4> <%= pro.price %> ₺ </h4>
+        </div>
+        <div class="desc">
+            <h4>
+                <%= pro.name %>
+            </h4>
+            <p>
+                <%= truncate(pro.description, length: 60) %>
+            </p>
+            <%= button_to  "Ürüne Git", product_path(pro), class: "btn btn-block", method: :get %>
+        </div>
+    </div>
+    <% end %>
+</div>
+</div>
