--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,12 +39,7 @@ body {
     max-height: 300px;
     overflow: hidden;
     padding: 0;
-    img {transition: all ease-in-out .3s;}
-    &:hover {
-        img {filter: blur(3px)}
-        .desc {background: transparentize($red, .5); color: $white; p {height: 50px; opacity: 1}}
-        .price {color: $red; h4 {font-size: 30px;} }
-    }
+    img {transition: all ease-in-out .3s; width: 100%;}
     .price {
         position: absolute;
         color: $black;
@@ -55,28 +50,86 @@ body {
     }
     .desc {
         transition: all ease-in-out .3s;
-        background: transparentize($red, .9);
         position: absolute;
         bottom: 0px;
         max-width: 300px;
+        color: $white;
         h4 {text-align: center;padding: 0px 5px;}
-        p {transition: all ease-in-out .3s;text-align: justify; color: $white; padding: 0px 5px; height: 0px; opacity: 0;}
-        .btn {background:transparentize($red, .9);}
+        p {transition: all ease-in-out .3s;text-align: justify; padding: 0px 5px; height: 0px; opacity: 0;}
+        .btn {
+            height: 0px; 
+            transition: all ease-in-out .3s; 
+            margin-bottom: -25px;
+        }
+    }
+    &:hover {
+        img {filter: blur(3px)}
+        .desc {
+            color: $white; 
+            p {
+                height: 50px; 
+                opacity: 1
+            }
+        .btn{
+            height:35px; 
+            margin-bottom: 0px;}
+        }
+        .price h4 {
+            font-size: 30px;
+        }  
+    }
+    &.tshirt {
+        .price {
+            color: $white;
+        }
+        .desc {
+            background: transparentize($red, .5);
+            .btn {
+                background:transparentize($red, .9); 
+            }
+        }
+        &:hover {
+            img {
+                filter: blur(3px)
+            }
+            .desc {
+                background: transparentize($red, .25);
+            }
+        }
+    }
+    &.shoe {
+        .price {
+            color: $white;
+        } 
+         .desc {
+            background: transparentize($blue, .5);
+            .btn {
+                background:transparentize($blue, .9); 
+            }
+        }  
+        &:hover {
+            img {
+                filter: blur(3px)
+            }
+            .desc {
+                background: transparentize($blue, .25);
+            }
+        }
     }
 }
 
 .single-product {
+    height: 512px;
     .product-image {
         text-align: center;
-        max-height: 300px; overflow: hidden;
+        overflow: hidden;
+        max-height: 100%;
         img {margin: auto; width: 100%;}
         padding: 0;
-        border: 3px $red solid;
     }
     .product-desc {
         padding: 0;
-        border: 3px $blue solid;
-        min-height: 300px;
+        height: 100%;
         overflow: hidden;
         .desc {padding: 10px 15px;}
         .price {
@@ -84,15 +137,41 @@ body {
             text-align: center;
             padding: 5px;
             width: 100%;
-            background: $blue;
             color: $white;
         }
         .btn {
             position: absolute;
             bottom: 0; left: 0;
-            background: $blue;
             color: $white;
             border-radius: 0;
+        }
+    }
+    &.tshirt {
+        .product-image {
+            border: 3px $red solid;
+        }
+        .product-desc {
+            border: 3px $red solid;
+            .price {
+                background: $red;
+            }
+            .btn {
+                background: $red;
+            }
+        }
+    }
+    &.shoe {
+        .product-image {
+            border: 3px $blue solid;
+        }
+        .product-desc {
+            border: 3px $blue solid;
+            .price {
+                background: $blue;
+            }
+            .btn {
+                background: $blue;
+            }    
         }
     }
 }
@@ -102,4 +181,15 @@ body {
     color: $white;
     transition: all ease-in-out .3s;
     &:hover {color:$white; background: darken($black, 5)}
+}
+
+.pagination {
+    li {
+        a {color: $blue;border-color: $blue; transition: all ease-in-out .3s; border-radius: 0px!important;
+        &:hover {background: transparentize($blue, .75); border-color: $blue}
+    }
+        &.active {
+            span {background: $blue; border-color: $blue;}
+        }
+    }
 }
