--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,6 +1,45 @@
-<% @cart_items.each do |ci| %>
-    <%= ci.product.name %>
-    <%= ci.product.price %>
-<% end %>
-<br>
-    <%= @cart.total_price %>
+
+    
+
+
+<div class="row">
+    <div class="col-md-9">
+        <div class="row">
+        <% @cart_items.each do |ci| %>
+            <% if ci.product.category_id == 1 %>
+            <div class="col-md-3 col-sm-4 col-xs-6 product shoe">
+            <% else %>
+            <div class="col-md-3 col-sm-4 col-xs-6 product tshirt">
+            <% end %>
+                <%= image_tag ci.product.image.url %>
+                <div class="price">
+                    <h4> <%= ci.product.price %> ₺ </h4>
+                </div>
+                <div class="delete">
+
+                </div>
+                <div class="desc">
+                    <h4>
+                        <%= ci.product.name %>
+                    </h4>
+                    <%= button_to  "Ürüne Git", product_path(ci.product), class: "btn btn-block", method: :get %>
+                </div>
+            </div>
+        <% end %>
+    </div>
+    </div>
+    <div class="col-md-3">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="desc text-center">
+                    <h4>
+                        Toplam Ücret <hr> <%= @cart.total_price %> ₺
+                    </h4>
+                    <hr>
+                    <%= button_to  "Satın Al", root_path, class: "btn btn-block btn-admin", style: "bottom: 0;", method: :get %>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
