--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,6 +1,32 @@
-<%= @category.name %><br>
-<%= @category.image %><br>
-<br><br><br>
-<%= link_to 'Yeni Kategori Ekle', 'categories/new' %>
-<br><br>
-<%= link_to 'Back', root_path %>
+<div class="row">
+    <div class="col-md-12 text-center"><h2> <%= @category.name %> </h2></div>
+    <hr>
+    <hr>
+    <hr>
+    <hr>
+<% @products.each do |pro| %>
+    <% if pro.category_id == 1 %>
+    <div class="col-md-3 col-sm-4 col-xs-6 product shoe">
+    <% else %>
+    <div class="col-md-3 col-sm-4 col-xs-6 product tshirt">
+    <% end %>
+        <%= image_tag pro.image.url %>
+        <div class="price">
+            <h4> <%= pro.price %> ₺ </h4>
+        </div>
+        <div class="desc">
+            <h4>
+                <%= pro.name %>
+            </h4>
+            <p>
+                <%= truncate(pro.description, length: 60) %>
+            </p>
+            <%= button_to  "Ürüne Git", product_path(pro), class: "btn btn-block", method: :get %>
+        </div>
+    </div>
+<% end %>
+</div>
+<div class="row text-center">
+    <%= will_paginate @products, renderer: BootstrapPagination::Rails %>
+</div>
+
