--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -7,12 +7,15 @@
 <br><br>
 <br><br><br>
 <%= link_to 'Back', root_path %> -->
-
-<div class="row single-product">
-    <div class="col-md-4 col-md-offset-2 product-image">
+<% if @product.category_id == 1 %>
+    <div class="row single-product shoe">
+<% else %>
+    <div class="row single-product tshirt">
+<% end %>
+    <div class="col-md-6 col-sm-12 product-image">
         <%= image_tag @product.image.url %>
     </div>
-    <div class="col-md-4 col-sm-12 product-desc">
+    <div class="col-md-6 col-sm-12 product-desc">
         <div class="price">
             <h4> <%= @product.price %> ₺ </h4>
         </div>
@@ -42,7 +45,11 @@
         <hr>
     </div>
     <% @products.each do |pro| %>
-    <div class="col-md-3 col-sm-6 col-xs-12 product">
+        <% if pro.category_id == 1 %>
+    <div class="col-md-3 col-sm-6 col-xs-12 product shoe">
+    <% else %>
+    <div class="col-md-3 col-sm-6 col-xs-12 product tshirt">
+    <% end %>
         <%= image_tag pro.image.url %>
         <div class="price">
             <h4> <%= pro.price %> ₺ </h4>
