--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,10 @@
 <div class="row">
 <% @products.each do |pro| %>
-    <div class="col-md-3 col-sm-4 col-xs-6 product">
+    <% if pro.category_id == 1 %>
+    <div class="col-md-3 col-sm-4 col-xs-6 product shoe">
+    <% else %>
+    <div class="col-md-3 col-sm-4 col-xs-6 product tshirt">
+    <% end %>
         <%= image_tag pro.image.url %>
         <div class="price">
             <h4> <%= pro.price %> ₺ </h4>
@@ -17,6 +21,7 @@
     </div>
 <% end %>
 </div>
+<div class="row text-center">
+    <%= will_paginate @products, renderer: BootstrapPagination::Rails %>
+</div>
 
-
-<%= will_paginate @products, renderer: BootstrapPagination::Rails %>
