--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -10,7 +10,8 @@
       
     </div>
     <a class="navbar-brand" href=" <%= root_path %> ">
-      <%= image_tag "logo.png"%>
+      <%= image_tag "logo.png", class: "brand-logo" %>
+      <%= image_tag "icon.png", class: "brand-icon" %>
     </a>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="navbar-collapse-1">
