--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -67,6 +67,7 @@ body {
         position: absolute;
         bottom: 0px;
         max-width: 300px;
+        width: 100%;
         color: $white;
         h4 {text-align: center;padding: 0px 5px;}
         p {transition: all ease-in-out .3s;text-align: justify; padding: 0px 5px; height: 0px; opacity: 0;}
