--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -28,10 +28,11 @@
         <li><a href="<%= brands_path %>">Markalar</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="<%= cart_path(current_user) %>">
+      <% if current_user %>
+         <li><a href="<%= cart_path(current_user.id) %>">
           <i class="fa fa-shopping-cart" aria-hidden="true"></i>  
-        </a></li>
-        <% if current_user %>
+        </a></li> 
+        
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"> <%= current_user.email %> <b class="caret"></b></a>
           <ul class="dropdown-menu">
