--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,7 +47,16 @@ body {
 .navbar-toggle {
     z-index:3;
 }
-
+.category {
+    overflow: hidden;
+    .desc {
+        text-align: center;
+        position: absolute;
+        bottom: 0; left: 0;
+        width: 100%;
+        h4 {color: $white;}
+    }
+}
 .product {
     border: 3px solid $white;
     max-height: 300px;
