--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -102,7 +102,7 @@ body {
             font-size: 30px;
         }  
     }
-    &.tshirt {
+    &.t-shirt {
         .price {
             color: $white;
         }
@@ -121,7 +121,7 @@ body {
             }
         }
     }
-    &.shoe {
+    &.ayakkabi {
         .price {
             color: $white;
         } 
