--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -4,22 +4,16 @@
         <hr>
         <div class="row">
             <% @products.where(brand_id: f.id).each do |pro| %>
-            <% if pro.category_id == 1 %>
-            <div class="col-md-6 col-sm-12 col-xs-12 product shoe">
-            <% else %>
-            <div class="col-md-6 col-sm-12 col-xs-12 product tshirt">
-            <% end %>
+            <div class="col-md-4 col-sm-4 col-xs-6 product <%= pro.category.name.parameterize %>">
+
                 <%= image_tag pro.image.url %>
                 <div class="price">
-                    <h4> <%= pro.price %> ₺ </h4>
+                    <h5> <%= pro.price %> ₺ </h5>
                 </div>
                 <div class="desc">
-                    <h4>
+                    <h5>
                         <%= pro.name %>
-                    </h4>
-                    <p>
-                        <%= truncate(pro.description, length: 60) %>
-                    </p>
+                    </h5>
                     <%= button_to  "Ürüne Git", product_path(pro), class: "btn btn-block", method: :get %>
                 </div>
             </div>
