--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,8 +1,5 @@
-<% if @product.category_id == 1 %>
-    <div class="row single-product shoe">
-<% else %>
-    <div class="row single-product tshirt">
-<% end %>
+<div class="col-md-3 col-sm-4 col-xs-6 product <%= pro.category.name.parameterize %>">
+
     <div class="col-md-6 col-sm-12 product-image">
         <%= image_tag @product.image.url %>
     </div>
@@ -36,11 +33,8 @@
         <hr>
     </div>
     <% @products.each do |pro| %>
-        <% if pro.category_id == 1 %>
-    <div class="col-md-3 col-sm-6 col-xs-12 product shoe">
-    <% else %>
-    <div class="col-md-3 col-sm-6 col-xs-12 product tshirt">
-    <% end %>
+        <div class="col-md-3 col-sm-4 col-xs-6 product <%= pro.category.name.parameterize %>">
+
         <%= image_tag pro.image.url %>
         <div class="price">
             <h4> <%= pro.price %> ₺ </h4>
