--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,10 +1,8 @@
 <div class="row">
 <% @products.each do |pro| %>
-    <% if pro.category_id == 1 %>
-    <div class="col-md-3 col-sm-4 col-xs-6 product shoe">
-    <% else %>
-    <div class="col-md-3 col-sm-4 col-xs-6 product tshirt">
-    <% end %>
+ 
+<div class="col-md-3 col-sm-4 col-xs-6 product <%= pro.category.name.parameterize %>">
+
         <%= image_tag pro.image.url %>
         <div class="price">
             <h4> <%= pro.price %> ₺ </h4>
