--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -11,7 +11,11 @@
             <% else %>
             <div class="col-md-3 col-sm-4 col-xs-6 product tshirt">
             <% end %>
-                <%= image_tag ci.product.image.url %>
+                <% if ci.product.image_file_name.nil? %>
+                    <%= image_tag("/images/original/#{ci.product.category_id}.png", :alt => "#{ci.product.name}") %>
+                <% else %>
+                    <%= image_tag("/products/#{ci.product.id}/#{ci.product.id}_large.jpg", :alt => "#{ci.product.name}") %>
+                <% end %>
                 <div class="price">
                     <h4> <%= ci.product.price %> ₺ </h4>
                 </div>
