--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,7 +5,11 @@
     <% else %>
     <div class="col-md-3 col-sm-4 col-xs-6 product tshirt">
     <% end %>
-        <%= image_tag pro.image.url %>
+        <% if pro.image_file_name.nil? %>
+            <%= image_tag("/images/original/#{pro.category_id}.png", :alt => "#{pro.name}") %>
+        <% else %>
+            <%= image_tag("/products/#{pro.id}/#{pro.id}_large.jpg", :alt => "#{pro.name}") %>
+        <% end %>
         <div class="price">
             <h4> <%= pro.price %> ₺ </h4>
         </div>
