--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -170,7 +170,7 @@ body {
             border-radius: 0;
         }
     }
-    &.tshirt {
+    &.t-shirt {
         .product-image {
             border: 3px $red solid;
         }
@@ -184,7 +184,7 @@ body {
             }
         }
     }
-    &.shoe {
+    &.ayakkabi {
         .product-image {
             border: 3px $blue solid;
         }
