--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,35 +1,25 @@
-<div class="col-md-6">
-    <h3><%= @brands.first.name %></h3>
-    <div class="row">
-        <div class="col-md-6">
-            <h5><%= @categories.first.name %></h5>
-            <% @products.where(brand_id: 1, category_id: 1).each do |f| %>
-            <%= link_to f.name, product_path(f) %>
-            <% end %>
+<div class="row">
+<% @products.each do |pro| %>
+ 
+<div class="col-md-3 col-sm-4 col-xs-6 product <%= pro.category.name.parameterize %>">
+
+        <%= image_tag pro.image.url %>
+        <div class="price">
+            <h4> <%= pro.price %> ₺ </h4>
         </div>
-        <div class="col-md-6">
-            <h5><%= @categories.second.name %></h5>
-            <% @products.where(brand_id: 1, category_id: 2).each do |f| %>
-            <%= link_to f.name, product_path(f) %>
-            <% end %>
+        <div class="desc">
+            <h4>
+                <%= pro.name %>
+            </h4>
+            <p>
+                <%= truncate(pro.description, length: 60) %>
+            </p>
+            <%= button_to  "Ürüne Git", product_path(pro), class: "btn btn-block", method: :get %>
         </div>
     </div>
-
+<% end %>
 </div>
-<div class="col-md-6">
-    <h3><%= @brands.second.name %></h3>
-    <div class="row">
-        <div class="col-md-6">
-            <h5><%= @categories.first.name %></h5>
-            <% @products.where(brand_id: 2, category_id: 1).each do |f| %>
-            <%= link_to f.name, product_path(f) %>
-            <% end %>
-        </div>
-        <div class="col-md-6">
-            <h5><%= @categories.second.name %></h5>
-            <% @products.where(brand_id: 2, category_id: 2).each do |f| %>
-            <%= link_to f.name, product_path(f) %>
-            <% end %>
-        </div>
+<div class="row text-center">
+    <%= will_paginate @products, renderer: BootstrapPagination::Rails %>
 </div>
 
