--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-3 col-sm-4 col-xs-6 product <%= pro.category.name.parameterize %>">
+    <div class="row single-product <%= @product.category.name.parameterize %>">
 
     <div class="col-md-6 col-sm-12 product-image">
         <%= image_tag @product.image.url %>
@@ -19,12 +19,14 @@
             Marka | <%= link_to  "#{ @product.brand.name }", brand_path(@product.brand) %>
             </div>
             
-            <%= link_to "Sepete Ekle#{notice}", add_to_cart_path(product_id: @product.id), class: "btn btn-block", method: :post %>
+            <%= link_to "Sepete Ekle", add_to_cart_path(product_id: @product.id), class: "btn btn-block", method: :post %>
         </div>
     </div>
     <div class="col-md-8 col-md-offset-2 col-sm-12" style="margin-top: 30px; padding: 0;">
         <% if current_user.admin? %>
             <%= link_to  "Ürünü Değiştir", edit_product_path(@product), class: "btn btn-block btn-admin" %>
+            <br>
+            <%= button_to  "Ürünü Kaldır", product_path(@product), class: "btn btn-block btn-danger", method: :delete %>
         <% end %>
     </div>
     <div class="col-md-12 text-center">
@@ -47,6 +49,7 @@
                 <%= truncate(pro.description, length: 60) %>
             </p>
             <%= button_to  "Ürüne Git", product_path(pro), class: "btn btn-block", method: :get %>
+
         </div>
     </div>
     <% end %>
