--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -6,11 +6,8 @@
     <div class="col-md-9">
         <div class="row">
         <% @cart_items.each do |ci| %>
-            <% if ci.product.category_id == 1 %>
-            <div class="col-md-3 col-sm-4 col-xs-6 product shoe">
-            <% else %>
-            <div class="col-md-3 col-sm-4 col-xs-6 product tshirt">
-            <% end %>
+            <div class="col-md-3 col-sm-4 col-xs-6 product <%= ci.product.category.name.parameterize %>">
+
                 <% if ci.product.image_file_name.nil? %>
                     <%= image_tag("/images/original/#{ci.product.category_id}.png", :alt => "#{ci.product.name}") %>
                 <% else %>
