--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,10 +1,7 @@
 <div class="row">
 <% @products.each do |pro| %>
-    <% if pro.category_id == 1 %>
-    <div class="col-md-3 col-sm-4 col-xs-6 product shoe">
-    <% else %>
-    <div class="col-md-3 col-sm-4 col-xs-6 product tshirt">
-    <% end %>
+    <div class="col-md-3 col-sm-4 col-xs-6 product <%= pro.category.name.parameterize %>">
+
         <% if pro.image_file_name.nil? %>
             <%= image_tag("/images/original/#{pro.category_id}.png", :alt => "#{pro.name}") %>
         <% else %>
