--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-6 col-sm-6 col-xs-6 category">
+    <div class="col-md-6 col-sm-12 category">
         <a href="<%= category_path(@shoe) %>">
             <%= image_tag "/images/original/1.png" %>
         </a>
@@ -7,7 +7,7 @@
             <h4> <%= @shoe.name %> </h4>
         </div>
     </div>
-     <div class="col-md-6 col-sm-6 col-xs-6 category">
+     <div class="col-md-6 col-sm-12 category">
          <a href="<%= category_path(@tshirt) %>">
             <%= image_tag "/images/original/2.png" %>
          </a>
