--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -217,3 +217,9 @@ body {
         }
     }
 }
+
+.footer {
+    background: $black;
+    color: $white;
+    position: relative; bottom: 0; left: 0;
+}
