--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="footer" style="background-color:#c2c2c2; height: 40px">
+<footer class="footer" style="height: 40px; width: 100%;">
   <div class="container">
     <center><p class="text-muted" style="line-height: 30px">Copyright © 2017 WinnerProject Team </p></center>
   </div>
