--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,4 +1,4 @@
-  <div class="row single-product <%= @product.category.name.parameterize %>">
+  <div class="row single-product ayakkabi">
     <div class="col-md-6 col-sm-12 product-image">
       <%= simple_form_for( @product, html: { multipart: true }) do |f| %>
         <%= f.file_field :image %>
